update website copy and onion addresses

--- a/index.html
+++ b/index.html
@@ -14,42 +14,55 @@
 <h1>Welcome to BayLeaks</h1>
 <p id='tagline'>Is there something you'd like to share?</p>
 
-<p>BayLeaks was created to support and enhance investigative journalism throughout the San Francisco Bay Area. We aim to promote governmental transparency and accountability, inspire powerful entities to act in the public interest, and preserve and uphold the principles of democracy and freedom of information.</p>
+<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area.</p>
 
-<p>BayLeaks uses an encrypted whistleblower submission system called SecureDrop to enable sources to securely share sensitive information that is newsworthy and relevant to the public interest. While using it requires careful attention to detail, this system provides strong anonymity for sources who wish to share information with the press that they believe the public has a right to know.</p>
+<p>BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable sources to securely share information that’s newsworthy and relevant to the public interest.</p>
 
-<p>Information submitted via BayLeaks may be used as the basis for coverage by a Bay Area news outlet. BayLeaks is run by journalists and technologists who may opt to produce news reports of their own, or may partner with Bay Area media outlets to ensure that shared information is passed safely to media professionals with relevant expertise.</p>
+<p>We work with a variety of media partners to publish stories based on information shared through our system. When we receive information that is newsworthy and relevant to the public interest, we will work with sources and media partners to use it as the basis for reporting that can make the greatest possible impact.</p>
 
-<p>If you'd like to get started sharing information now, go directly to our <a href='#how-to'>BayLeaks Low Tech How-To Guide</a>. To learn more about BayLeaks, read on.</p>
+<p>We believe increased transparency and public accountability can discourage bad behavior by powerful individuals and organizations.</p>
 
-<p><strong>Our SecureDrop server is currently offline for upgrades. You can still contact us through encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our GPG key.</strong></p>
+<p>Our SecureDrop system's onion address is <strong>wd5x5eexdqcjrqfa.onion</strong>. We encourage use of SecureDrop, but you may also contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>GPG key</a>.</p>
+
+<p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>. To learn more about BayLeaks, read on.</p>
 
 <h2>About SecureDrop</h2>
 
-<p>BayLeaks uses SecureDrop, a whistleblowing platform managed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop was built with advanced cryptography software that is trusted by leading information security experts. BayLeaks’ SecureDrop submission site is what’s known as a Tor Hidden Service. These websites are only available through the use of Tor and can be much more secure than ordinary websites. Hidden services use .onion Web addresses (the .com or .org of the digital anonymity world). For a more detailed technical explanation of how SecureDrop works, please <a href='https://freedom.press/securedrop'>visit the Freedom of the Press Foundation.</a></p>
+<p>BayLeaks uses SecureDrop, a whistleblowing platform developed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop uses end-to-end encryption and the Tor anonymity network to provide strong security to its users. For a more detailed technical explanation of how SecureDrop works, please <a href='https://freedom.press/securedrop'>visit their website</a>.</p>
 
 <h2>About protecting our sources</h2>
 
-<p>BayLeaks offers sources a way to share information and files more securely than with conventional email or other electronic means. Used properly, SecureDrop ensures that a source may share information with the highest degree of confidentiality that experts in secure communication can technically provide. The system is designed to prevent your name, phone number, email addresses, IP address, or other identifying information from being revealed, unless you choose to make your identity known.</p>
+<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone from seeing names, IP addresses and other identifying information, including us. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having the story traced back to them if they wish to retain anonymity.</p>
 
-<h2>About submitting to BayLeaks</h2>
+<h2>Important information before you begin</h2>
 
-<p>Specific instructions for sharing information are included in <a href='#how-to'>BayLeaks Low Tech How-To Guide</a>. Please follow the instructions carefully. Since our system was created with the highest level of digital security in mind, BayLeaks must be used conjunction with Tor, an online anonymity network that has gained the trust of Internet users around the world. The official <a href='https://www.torproject.org/projects/torbrowser.html.en'>Tor Browser</a> is the easiest way to use Tor.</p>
+<p>You should only open Tor Browser at a public location, such as a library or a café. This offers greater security than submitting documents from a residence or place of employment, where it would be easier for a third party to detect you as a Tor user. After sharing information, you may continue to communicate securely with the BayLeaks team through SecureDrop using the codename you were assigned on your first visit.</p>
+<p>Read on to learn how to share information!</p>
 
-<p>If you seek maximum confidentiality, we encourage you to boot your computer from a USB key containing the <a href='https://tails.boum.org/'>Tails secure operating system</a>, which includes the Tor Browser.</p>
-
-<p>You can access our submission site at <strong>l7rt5kabupal7eo7.onion</strong></p>
-
-<h2>IMPORTANT INFORMATION BEFORE YOU BEGIN</h2>
-
-<p>You should only log onto Tor via a public location, such as a library or a café. This offers greater security than submitting documents from a residence or place of employment, where it would be easier for a third party to detect you as a Tor user. After sharing information with BayLeaks, you may continue to communicate securely with the BayLeaks team through SecureDrop, using the codename you were assigned on your first visit.</p>
-
-<p>Once you have finished sending documents, please take the precautionary step of destroying any recorded copies of your codename and erase and destroying any media (DVDs, USB sticks) used to copy the leaked documents. At that point, we also recommend deleting the Tor Browser Bundle.</p>
+<section id='how-to'>
+<h2>BayLeaks How-To Guide</h2>
+<p>Follow these instructions carefully to share information.</p>
+<h3>Download the Tor Browser Bundle</h3>
+<p>The Tor Browser Bundle is an easy way to access the Tor network, which our SecureDrop system uses to protect our users' anonymity. Here's how to get it!</p>
+<ol>
+<li>Go to a coffee shop or library that offers public Wi-Fi. Make sure you are not connecting from your home or work IP address.</li>
+<li>Open your web browser and visit <a href='https://www.torproject.org'>https://www.torproject.org</a></li>
+<li>Look under "Our Projects", locate "Tor Browser," and click on it.</li>
+<li>Click the button that says "Download Tor Browser Bundle."</li>
+<li>Look under "Tor Browser Bundle Downloads" to find the right version for your computer's operating system. Choose from Microsoft Windows, Mac OSX, or Linux.</li>
+<li>Follow the prompts to install Tor.</li>
+</ol>
+<h3>Share documents and information with BayLeaks</h3>
+<p>Open your Tor Browser. (Again, make sure you are on public Wi-Fi for added security!) Type or copy this into the address bar and press Enter: <strong>wd5x5eexdqcjrqfa.onion</strong></p>
+<p>Follow the instructions on our SecureDrop site to share documents and information. If you have a specific media partner in mind, please name them in a message to the BayLeaks team. If you want to check back later for responses or send follow-up messages, memorize your codename or write it down and store it in a safe place.</p>
+<h3>Check for a response</h3>
+<p>Open the Tor Browser and return to the SecureDrop site at <strong>wd5x5eexdqcjrqfa.onion</strong>. Use your codename to log in and check for replies from the BayLeaks team or share more information. When you’re finished communicating with the BayLeaks team, throw it away. Then delete Tor Browser from your computer.</p>
+</section>
 
 <h2>Sending encrypted email</h2>
-<p>If you already have experience with secure communications software and you’d like to initiate a secure email exchange without using BayLeaks' SecureDrop system, you may send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for the GPG key.</p>
+<p>We strongly encourage you to use our SecureDrop system, but if you already have experience with secure communications software and you’d like to initiate a secure email exchange instead, you may send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our GPG key.</p>
 
-<pre>
+<pre id='gpg-key'>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
@@ -105,13 +118,9 @@ X3wWSwXY4LB5hvh0eDzZLKAJC7Wxk5+ue8LmWLDdOIJZTzPH/wNRnKFfUZI8
 
 <h2>BayLeaks Privacy Policy</h2>
 
-<p>When BayLeaks users visit or use our server at l7rt5kabupal7eo7.onion following the instructions in our Low Tech How-To Guide, we will not record your IP address or information about your browser, computer, or operating system, nor will we embed third-party content or deliver persistent cookies to  your browser. Our servers are under the physical control of BayLeaks team members.</p>
+<p>When BayLeaks users visit our SecureDrop site at wd5x5eexdqcjrqfa.onion following the instructions in our How-To Guide, we will not record their IP address or information about their browser, computer, or operating system, nor will we embed third-party content or deliver persistent cookies to their computers. Our servers are under the physical control of BayLeaks team members in a protected location.</p>
 
 <p>Though it is our intention to keep you and your information safe, BayLeaks does not guarantee 100% perfect security &mdash; nor does any technology.  Among other risks, if your computer is compromised, any activities, including communications through SecureDrop, could be compromised as well. The system is provided on an “as is” basis, with no warranties or representations, and any use of it is at the user's own risk.</p>
-
-<section id='how-to'>
-<img src="/images/LowTechGuide.jpg" alt="BayLeaks Low Tech How-To Guide" id='how-to-img'>
-</section>
 
 </body>
 </html>
