--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
 <h1>Welcome to BayLeaks</h1>
 <p id='tagline'>Is there something you'd like to share?</p>
 
-<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area.</p>
-
-<p>BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable sources to securely share information that’s newsworthy and relevant to the public interest.</p>
-
-<p>We work with a variety of media partners to publish stories based on information shared through our system. When we receive information that is newsworthy and relevant to the public interest, we will work with sources and media partners to use it as the basis for reporting that can make the greatest possible impact.</p>
+<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area. BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable sources to securely share information that’s newsworthy and relevant to the public interest. We work with a variety of media partners to publish stories based on information shared through our system.</p>
 
 <p>We believe increased transparency and public accountability can discourage bad behavior by powerful individuals and organizations.</p>
 
-<p>Our SecureDrop system's onion address is <strong>wd5x5eexdqcjrqfa.onion</strong>. We encourage use of SecureDrop, but you may also contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>GPG key</a>.</p>
+<p>Our SecureDrop system's onion address is <strong>wd5x5eexdqcjrqfa.onion</strong>. We encourage use of SecureDrop, but you may also contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>PGP key</a>.</p>
 
-<p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>. To learn more about BayLeaks, read on.</p>
+<p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>. To learn more about BayLeaks and SecureDrop, read on.</p>
 
 <h2>About SecureDrop</h2>
 
@@ -32,12 +28,11 @@
 
 <h2>About protecting our sources</h2>
 
-<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone from seeing names, IP addresses and other identifying information, including us. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having the story traced back to them if they wish to retain anonymity.</p>
+<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone from seeing names, IP addresses and other identifying information, including us. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having news stories traced back to them if they wish to retain anonymity.</p>
 
 <h2>Important information before you begin</h2>
 
 <p>You should only open Tor Browser at a public location, such as a library or a café. This offers greater security than submitting documents from a residence or place of employment, where it would be easier for a third party to detect you as a Tor user. After sharing information, you may continue to communicate securely with the BayLeaks team through SecureDrop using the codename you were assigned on your first visit.</p>
-<p>Read on to learn how to share information!</p>
 
 <section id='how-to'>
 <h2>BayLeaks How-To Guide</h2>
@@ -50,17 +45,18 @@
 <li>Look under "Our Projects", locate "Tor Browser," and click on it.</li>
 <li>Click the button that says "Download Tor Browser Bundle."</li>
 <li>Look under "Tor Browser Bundle Downloads" to find the right version for your computer's operating system. Choose from Microsoft Windows, Mac OSX, or Linux.</li>
-<li>Follow the prompts to install Tor.</li>
+<li>Follow the prompts to install the Tor Browser.</li>
 </ol>
 <h3>Share documents and information with BayLeaks</h3>
-<p>Open your Tor Browser. (Again, make sure you are on public Wi-Fi for added security!) Type or copy this into the address bar and press Enter: <strong>wd5x5eexdqcjrqfa.onion</strong></p>
+<p>Open your Tor Browser. Again, make sure you are on public Wi-Fi for added security!</p>
+<p>Type or copy our onion URL into the address bar and press Enter: <strong>wd5x5eexdqcjrqfa.onion</strong></p>
 <p>Follow the instructions on our SecureDrop site to share documents and information. If you have a specific media partner in mind, please name them in a message to the BayLeaks team. If you want to check back later for responses or send follow-up messages, memorize your codename or write it down and store it in a safe place.</p>
-<h3>Check for a response</h3>
+<h3>Check for responses</h3>
 <p>Open the Tor Browser and return to the SecureDrop site at <strong>wd5x5eexdqcjrqfa.onion</strong>. Use your codename to log in and check for replies from the BayLeaks team or share more information. When you’re finished communicating with the BayLeaks team, throw it away. Then delete Tor Browser from your computer.</p>
 </section>
 
 <h2>Sending encrypted email</h2>
-<p>We strongly encourage you to use our SecureDrop system, but if you already have experience with secure communications software and you’d like to initiate a secure email exchange instead, you may send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our GPG key.</p>
+<p>We strongly encourage you to use our SecureDrop system, but if you'd prefer to email us instead, you can send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our PGP key.</p>
 
 <pre id='gpg-key'>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
@@ -118,7 +114,7 @@ X3wWSwXY4LB5hvh0eDzZLKAJC7Wxk5+ue8LmWLDdOIJZTzPH/wNRnKFfUZI8
 
 <h2>BayLeaks Privacy Policy</h2>
 
-<p>When BayLeaks users visit our SecureDrop site at wd5x5eexdqcjrqfa.onion following the instructions in our How-To Guide, we will not record their IP address or information about their browser, computer, or operating system, nor will we embed third-party content or deliver persistent cookies to their computers. Our servers are under the physical control of BayLeaks team members in a protected location.</p>
+<p>When BayLeaks users visit our SecureDrop site following the instructions in our How-To Guide, we will not record their IP address or information about their browser, computer, or operating system, nor will we embed third-party content or deliver persistent cookies to their computers. Our servers are under the physical control of BayLeaks team members in a protected location.</p>
 
 <p>Though it is our intention to keep you and your information safe, BayLeaks does not guarantee 100% perfect security &mdash; nor does any technology.  Among other risks, if your computer is compromised, any activities, including communications through SecureDrop, could be compromised as well. The system is provided on an “as is” basis, with no warranties or representations, and any use of it is at the user's own risk.</p>
 
