more cleanup of the copy

--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
 <h1>Welcome to BayLeaks</h1>
 <p id='tagline'>Is there something you'd like to share?</p>
 
-<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area. BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable sources to securely share information that’s newsworthy and relevant to the public interest. We work with a variety of media partners to publish stories based on information shared through our system.</p>
+<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area. BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable users to securely share information that’s newsworthy and relevant to the public interest. We work with a variety of media partners to publish stories based on information shared through our system.</p>
 
 <p>We believe increased transparency and public accountability can discourage bad behavior by powerful individuals and organizations.</p>
 
 <p>Our SecureDrop system's onion address is <strong>wd5x5eexdqcjrqfa.onion</strong>. We encourage use of SecureDrop, but you may also contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>PGP key</a>.</p>
 
-<p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>. To learn more about BayLeaks and SecureDrop, read on.</p>
+<p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>.</p>
 
 <h2>About SecureDrop</h2>
 
-<p>BayLeaks uses SecureDrop, a whistleblowing platform developed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop uses end-to-end encryption and the Tor anonymity network to provide strong security to its users. For a more detailed technical explanation of how SecureDrop works, please <a href='https://freedom.press/securedrop'>visit their website</a>.</p>
+<p>BayLeaks uses SecureDrop, a secure communications system developed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop uses end-to-end encryption and the Tor anonymity network to provide strong security to its users. For a more detailed explanation of how SecureDrop works, please <a href='https://freedom.press/securedrop'>visit the Freedom of the Press Foundation website</a>.</p>
 
 <h2>About protecting our sources</h2>
 
-<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone from seeing names, IP addresses and other identifying information, including us. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having news stories traced back to them if they wish to retain anonymity.</p>
+<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone &mdash; including us &mdash; from seeing names, IP addresses and other identifying information. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having news stories traced back to them if they wish to retain anonymity.</p>
 
 <h2>Important information before you begin</h2>
 
-<p>You should only open Tor Browser at a public location, such as a library or a café. This offers greater security than submitting documents from a residence or place of employment, where it would be easier for a third party to detect you as a Tor user. After sharing information, you may continue to communicate securely with the BayLeaks team through SecureDrop using the codename you were assigned on your first visit.</p>
+<p>You should only open Tor Browser at a public location, such as a library or a café. This offers greater security than connecting to the Internet from a residence or place of employment, where it would be easier for a third party to detect you as a Tor user. After sharing information, you may continue to communicate securely with the BayLeaks team through SecureDrop using the codename you were assigned on your first visit.</p>
 
 <section id='how-to'>
 <h2>BayLeaks How-To Guide</h2>
 <p>Follow these instructions carefully to share information.</p>
-<h3>Download the Tor Browser Bundle</h3>
-<p>The Tor Browser Bundle is an easy way to access the Tor network, which our SecureDrop system uses to protect our users' anonymity. Here's how to get it!</p>
-<ol>
-<li>Go to a coffee shop or library that offers public Wi-Fi. Make sure you are not connecting from your home or work IP address.</li>
+<h3>1. Download the Tor Browser Bundle</h3>
+<p>The Tor Browser Bundle is an easy way to access the Tor network, which our SecureDrop system uses to protect users' anonymity. Here's how to get it!</p>
+<ul>
+<li>Go to a coffee shop or library that offers public Wi-Fi. Make sure you are not connecting from your home or work Internet connection.</li>
 <li>Open your web browser and visit <a href='https://www.torproject.org'>https://www.torproject.org</a></li>
-<li>Look under "Our Projects", locate "Tor Browser," and click on it.</li>
+<li>Look under "Our Projects," locate "Tor Browser," and click on it.</li>
 <li>Click the button that says "Download Tor Browser Bundle."</li>
 <li>Look under "Tor Browser Bundle Downloads" to find the right version for your computer's operating system. Choose from Microsoft Windows, Mac OSX, or Linux.</li>
 <li>Follow the prompts to install the Tor Browser.</li>
-</ol>
-<h3>Share documents and information with BayLeaks</h3>
+</ul>
+<h3>2. Share documents and information with BayLeaks</h3>
 <p>Open your Tor Browser. Again, make sure you are on public Wi-Fi for added security!</p>
 <p>Type or copy our onion URL into the address bar and press Enter: <strong>wd5x5eexdqcjrqfa.onion</strong></p>
 <p>Follow the instructions on our SecureDrop site to share documents and information. If you have a specific media partner in mind, please name them in a message to the BayLeaks team. If you want to check back later for responses or send follow-up messages, memorize your codename or write it down and store it in a safe place.</p>
-<h3>Check for responses</h3>
-<p>Open the Tor Browser and return to the SecureDrop site at <strong>wd5x5eexdqcjrqfa.onion</strong>. Use your codename to log in and check for replies from the BayLeaks team or share more information. When you’re finished communicating with the BayLeaks team, throw it away. Then delete Tor Browser from your computer.</p>
+<h3>3. Check for responses</h3>
+<p>Open the Tor Browser and return to the SecureDrop site at <strong>wd5x5eexdqcjrqfa.onion</strong>. Use your codename to log in and check for replies from the BayLeaks team or share more information. When you’re finished communicating with the BayLeaks team, throw away your codename. Then delete Tor Browser from your computer.</p>
 </section>
 
 <h2>Sending encrypted email</h2>
