--- a/index.html
+++ b/index.html
@@ -24,11 +24,27 @@
 
 <h2>About SecureDrop</h2>
 
-<p>BayLeaks uses SecureDrop, a secure communications system developed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop uses end-to-end encryption and the Tor anonymity network to provide strong security to its users. For a more detailed explanation of how SecureDrop works, please <a href='https://freedom.press/securedrop'>visit the Freedom of the Press Foundation website</a>.</p>
+<p>BayLeaks uses SecureDrop, a secure communications system developed by the <a href='https://freedom.press'>Freedom of the  Press Foundation</a>, a nonprofit organization dedicated to helping support and defend public-interest journalism. SecureDrop uses end-to-end encryption and the Tor anonymity network to provide strong security to its users. For a more detailed explanation of how SecureDrop works, please <a href='https://securedrop.org'>visit the Freedom of the Press Foundation website</a>.</p>
 
-<h2>About protecting our sources</h2>
 
-<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone &mdash; including us &mdash; from seeing names, IP addresses and other identifying information. It should be noted that BayLeaks can only provide a layer of technical digital security. People who are considering sharing highly sensitive information should think carefully about their actions in the physical world to avoid having news stories traced back to them if they wish to retain anonymity.</p>
+<h2>About Us</h2>
+
+<p><strong>Rebecca Bowe</strong> is an Interactive Producer at KQED in San Francisco. She formerly served as news editor of the San Francisco Bay Guardian, and has roughly a decade of experience in journalism. In 2012, she served as International Privacy Coordinator at the Electronic Frontier Foundation.</p>
+
+<p><strong>John Shutt</strong> is an independent technologist in San Francisco, managing BayLeaks' IT infrastructure and working on systems that expand the public's access to important information. He currently serves on the board of directors at Noisebridge.</p>
+
+<h3>Advisory Board</h3>
+
+<p><strong>Natalie Cadranel</strong> is the founder of OpenArchive, a free, open source mobile application for citizen journalists that leverages the efforts of the Internet Archive, Tor, and Creative Commons. At UC Berkeley's I School, she worked with Meedan and Common Crawl to expand the reach and use of fact-checking and open knowledge tools. Her work aims to improve technology at the intersection of privacy, accessibility, policy, and long-term preservation of audiovisual citizen media.</p>
+
+<p><strong>Tim Hwang</strong> is a lawyer and technologist working at the intersection of legal and computer code. He is currently an affiliate researcher at Data &amp; Society, where he explores policymaking issues surrounding intelligent systems. He has previously worked with the Electronic Frontier Foundation, Creative Commons, and the Berkman Center for Internet and Society.</p>
+
+<p><strong>Micah Lee</strong> is a technologist with a focus on operational security, source protection, privacy, and cryptography. He is a founder and board member of Freedom of the Press Foundation and the author of the "<a href='https://freedom.press/sites/default/files/encryption_works.pdf'>Encryption Works</a>" handbook. He develops open source security tools including OnionShare, SecureDrop, and Tor Browser Launcher. Prior to joining <em>The Intercept</em>, Micah worked as a staff technologist at the Electronic Frontier Foundation.</p>
+
+<h2>Protecting our sources</h2>
+
+<p>Used properly, BayLeaks’ SecureDrop system provides strong technical protections for people sharing information, preventing anyone &mdash; including us &mdash; from seeing names, IP addresses and other identifying information. It should be noted that BayLeaks can only provide a layer of technical digital security.</p>
+
 
 <h2>Important information before you begin</h2>
 
