--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <p><strong>Rebecca Bowe</strong> is an Interactive Producer at KQED in San Francisco. She formerly served as news editor of the San Francisco Bay Guardian, and has roughly a decade of experience in journalism. In 2012, she served as International Privacy Coordinator at the Electronic Frontier Foundation.</p>
 
+<p><strong>Shawn Gaynor</strong> is Editor-in-Chief of The Outsider, a San Francisco Bay Area new media project. He entered journalism in 1999 at the weekly alternative news digest Asheville Global Report where he worked for years as part of the paper's editorial board. He served as a correspondent for the San Francisco Bay Guardian, and his work has appeared in The Bold Italic and the San Francisco Public Press.</p>
+
 <p><strong>John Shutt</strong> is an independent technologist in San Francisco, managing BayLeaks' IT infrastructure and working on systems that expand the public's access to important information. He currently serves on the board of directors at Noisebridge.</p>
 
 <h3>Advisory Board</h3>
