note that securedrop is offline for upgrades

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <h1>Welcome to BayLeaks</h1>
 <p id='tagline'>Is there something you'd like to share?</p>
 
-<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area. BayLeaks uses SecureDrop, an encrypted, anonymized communications system, to enable users to securely share information that’s newsworthy and relevant to the public interest. We work with a variety of media partners to publish stories based on information shared through our system.</p>
+<p>BayLeaks was created to facilitate high-impact investigative journalism throughout the San Francisco Bay Area, enabling community members to securely share information that’s newsworthy and relevant to the public interest. We work with a variety of media partners to publish stories based on information shared through our system.</p>
 
 <p>We believe increased transparency and public accountability can discourage bad behavior by powerful individuals and organizations.</p>
 
-<p>Our SecureDrop system's onion address is <strong>wd5x5eexdqcjrqfa.onion</strong>. We encourage use of SecureDrop, but you may also contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>PGP key</a>.</p>
+<p><strong>Our SecureDrop system is currently offline for upgrades.</strong> In the meantime, you can contact us via encrypted email at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our <a href='#gpg-key'>PGP key</a>.</p>
 
 <p>If you'd like to get started sharing information now, go directly to our <a href="#how-to">BayLeaks How-To Guide</a>.</p>
 
@@ -58,7 +58,7 @@
 </section>
 
 <h2>Sending encrypted email</h2>
-<p>We strongly encourage you to use our SecureDrop system, but if you'd prefer to email us instead, you can send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our PGP key.</p>
+<p>If you'd like to contact us by email, you can send an encrypted email to the BayLeaks team at <a href='mailto:bayleaks@riseup.net'>bayleaks@riseup.net</a>. Scroll down for our PGP key.</p>
 
 <pre id='gpg-key'>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
